# dev-python

./: .gitignore  README.md  azure_openai.ipynb  basic.ipynb  basic_of_python.ipynb  devbox.json  hello.py  lefthook.yml  limited_resources.ipynb  pyproject.toml  python_as_shell.py  torch.ipynb
devbox/: .env.example  devbox.json
docker/: .env.example  Makefile  compose.yml
docker/.devcontainer/: devcontainer.json
docker/python/: Dockerfile
notebooks/examples/: azure_openai.ipynb  basic_of_python.ipynb  limited_resources.ipynb  torch.ipynb
